--- a/main.html
+++ b/main.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	 <div id="container"></div>
+    <ul id="band" type="square"></ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
