--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 	 <div id="container"></div>
+	<!--img id="band-image" src="images/band-image.jpg" alt="Band Image" !--> 
+
     <ul id="band" type="square"></ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
