--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	 <div id="container"></div>
 	<!--img id="band-image" src="images/band-image.jpg" alt="Band Image"!-->
 
-    <ul id="band" type="square"></ul>
+    <ul id="bands" type="square"></ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
